{
  "version": 4,
  "terraform_version": "1.11.1",
  "serial": 147,
  "lineage": "2a70362c-0888-0009-c1a8-35a9fb81839e",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:039839656777:loadbalancer/app/technova-prod-alb/f63c4c47a371460f",
            "arn_suffix": "app/technova-prod-alb/f63c4c47a371460f",
            "desync_mitigation_mode": "defensive",
            "dns_name": "technova-prod-alb-868002367.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:039839656777:loadbalancer/app/technova-prod-alb/f63c4c47a371460f",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "technova-prod-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-047463a802614cfc8"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-08327f4f38851b99e"
              },
              {
                "subnet_id": "subnet-0f4ad2a43bf03ee8c"
              }
            ],
            "subnets": [
              "subnet-08327f4f38851b99e",
              "subnet-0f4ad2a43bf03ee8c"
            ],
            "tags": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-alb",
              "Project": "technova"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-alb",
              "Project": "technova"
            },
            "vpc_id": "vpc-0b9cb5991c5c11266",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "module.security_groups.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:039839656777:listener/app/technova-prod-alb/f63c4c47a371460f/4719d2467fbe1877",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:039839656777:targetgroup/technova-prod-tg/8df3ffedcc9d6d68",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:039839656777:listener/app/technova-prod-alb/f63c4c47a371460f/4719d2467fbe1877",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:039839656777:loadbalancer/app/technova-prod-alb/f63c4c47a371460f",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-http-listener",
              "Project": "technova"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-http-listener",
              "Project": "technova"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.main",
            "module.alb.aws_lb_target_group.main",
            "module.security_groups.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:039839656777:targetgroup/technova-prod-tg/8df3ffedcc9d6d68",
            "arn_suffix": "targetgroup/technova-prod-tg/8df3ffedcc9d6d68",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:039839656777:targetgroup/technova-prod-tg/8df3ffedcc9d6d68",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "technova-prod-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-tg",
              "Project": "technova"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-tg",
              "Project": "technova"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0b9cb5991c5c11266"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:039839656777:security-group/sg-047463a802614cfc8",
            "description": "Security group for the application load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-047463a802614cfc8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "technova-prod-alb-sg",
            "name_prefix": "",
            "owner_id": "039839656777",
            "revoke_rules_on_delete": false,
            "tags": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-alb-sg",
              "Project": "technova"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-alb-sg",
              "Project": "technova"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b9cb5991c5c11266"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:039839656777:security-group/sg-0003a2472e4c8096e",
            "description": "Security group for the web application instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0003a2472e4c8096e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-047463a802614cfc8"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "HTTPS from ALB",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-047463a802614cfc8"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "technova-prod-instance-sg",
            "name_prefix": "",
            "owner_id": "039839656777",
            "revoke_rules_on_delete": false,
            "tags": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-instance-sg",
              "Project": "technova"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-instance-sg",
              "Project": "technova"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b9cb5991c5c11266"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_groups.aws_security_group.alb",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0880596b2310dcd05",
            "domain": "vpc",
            "id": "eipalloc-0880596b2310dcd05",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-44-246-47-240.us-west-2.compute.amazonaws.com",
            "public_ip": "44.246.47.240",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-eip-1",
              "Project": "technova"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-eip-1",
              "Project": "technova"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-019db737941c9b58f",
            "domain": "vpc",
            "id": "eipalloc-019db737941c9b58f",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-44-246-234-46.us-west-2.compute.amazonaws.com",
            "public_ip": "44.246.234.46",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-eip-2",
              "Project": "technova"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-eip-2",
              "Project": "technova"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:039839656777:internet-gateway/igw-0ec02bb07335f3f15",
            "id": "igw-0ec02bb07335f3f15",
            "owner_id": "039839656777",
            "tags": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-igw",
              "Project": "technova"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-igw",
              "Project": "technova"
            },
            "vpc_id": "vpc-0b9cb5991c5c11266"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0880596b2310dcd05",
            "connectivity_type": "public",
            "id": "nat-0a44fedba631ebb99",
            "network_interface_id": "eni-0d7f3e4fd44b9d1ad",
            "private_ip": "10.0.1.219",
            "public_ip": "44.246.47.240",
            "subnet_id": "subnet-08327f4f38851b99e",
            "tags": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-nat-1",
              "Project": "technova"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-nat-1",
              "Project": "technova"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-019db737941c9b58f",
            "connectivity_type": "public",
            "id": "nat-00d03c8ab62082beb",
            "network_interface_id": "eni-09c1596f720cd05d7",
            "private_ip": "10.0.2.194",
            "public_ip": "44.246.234.46",
            "subnet_id": "subnet-0f4ad2a43bf03ee8c",
            "tags": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-nat-2",
              "Project": "technova"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-nat-2",
              "Project": "technova"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:039839656777:route-table/rtb-0844f2de5f0d5057f",
            "id": "rtb-0844f2de5f0d5057f",
            "owner_id": "039839656777",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a44fedba631ebb99",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-private-rt-1",
              "Project": "technova"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-private-rt-1",
              "Project": "technova"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b9cb5991c5c11266"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:039839656777:route-table/rtb-0f59029dae398af70",
            "id": "rtb-0f59029dae398af70",
            "owner_id": "039839656777",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-00d03c8ab62082beb",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-private-rt-2",
              "Project": "technova"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-private-rt-2",
              "Project": "technova"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b9cb5991c5c11266"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:039839656777:route-table/rtb-09f7bb02df6d9408a",
            "id": "rtb-09f7bb02df6d9408a",
            "owner_id": "039839656777",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ec02bb07335f3f15",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-public-rt",
              "Project": "technova"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-public-rt",
              "Project": "technova"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b9cb5991c5c11266"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05795c4511ac59d5b",
            "route_table_id": "rtb-0844f2de5f0d5057f",
            "subnet_id": "subnet-0cd2f4e4a9028ad90"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03a0c2be0d20e5d3a",
            "route_table_id": "rtb-0f59029dae398af70",
            "subnet_id": "subnet-0cb68ea3ec68afcd7"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f3ccfa05bec1e5c3",
            "route_table_id": "rtb-09f7bb02df6d9408a",
            "subnet_id": "subnet-08327f4f38851b99e"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a4879ecd600aa5e3",
            "route_table_id": "rtb-09f7bb02df6d9408a",
            "subnet_id": "subnet-0f4ad2a43bf03ee8c"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:039839656777:subnet/subnet-0cd2f4e4a9028ad90",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cd2f4e4a9028ad90",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "039839656777",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-private-subnet-1",
              "Project": "technova"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-private-subnet-1",
              "Project": "technova"
            },
            "vpc_id": "vpc-0b9cb5991c5c11266"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:039839656777:subnet/subnet-0cb68ea3ec68afcd7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cb68ea3ec68afcd7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "039839656777",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-private-subnet-2",
              "Project": "technova"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-private-subnet-2",
              "Project": "technova"
            },
            "vpc_id": "vpc-0b9cb5991c5c11266"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:039839656777:subnet/subnet-08327f4f38851b99e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08327f4f38851b99e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "039839656777",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-public-subnet-1",
              "Project": "technova"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-public-subnet-1",
              "Project": "technova"
            },
            "vpc_id": "vpc-0b9cb5991c5c11266"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:039839656777:subnet/subnet-0f4ad2a43bf03ee8c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f4ad2a43bf03ee8c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "039839656777",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-public-subnet-2",
              "Project": "technova"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-public-subnet-2",
              "Project": "technova"
            },
            "vpc_id": "vpc-0b9cb5991c5c11266"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:039839656777:vpc/vpc-0b9cb5991c5c11266",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a5ac8fd1ac1827ec",
            "default_route_table_id": "rtb-01638381f63cbee00",
            "default_security_group_id": "sg-01b581a70d1f8216c",
            "dhcp_options_id": "dopt-0e536bbda95b905de",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b9cb5991c5c11266",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01638381f63cbee00",
            "owner_id": "039839656777",
            "tags": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-vpc",
              "Project": "technova"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-vpc",
              "Project": "technova"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}